Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
-
None
-
ghx-label-3
Description
Error Message
AssertionError: /data/jenkins/workspace/impala-asf-master-core-jdk11/repos/Impala/logs/custom_cluster_tests/impalad.impala-ec2-centos79-m6i-4xlarge-xldisk-197f.vpc.cloudera.com.jenkins.log.INFO.20240323-184351.16035 contains 'InaccessibleObjectException' assert 0 == 1
Stacktrace
verifiers/test_banned_log_messages.py:40: in test_no_inaccessible_objects self.assert_message_absent('InaccessibleObjectException') verifiers/test_banned_log_messages.py:36: in assert_message_absent assert returncode == 1, "%s contains '%s'" % (log_file_path, message) E AssertionError: /data/jenkins/workspace/impala-asf-master-core-jdk11/repos/Impala/logs/custom_cluster_tests/impalad.impala-ec2-centos79-m6i-4xlarge-xldisk-197f.vpc.cloudera.com.jenkins.log.INFO.20240323-184351.16035 contains 'InaccessibleObjectException' E assert 0 == 1
Standard Output
java.lang.reflect.InaccessibleObjectException: Unable to make field private jdk.internal.platform.cgroupv1.CgroupV1MemorySubSystemController jdk.internal.platform.cgroupv1.CgroupV1Subsystem.memory accessible: module java.base does not "opens jdk.internal.platform.cgroupv1" to unnamed module @1a2e2935 java.lang.reflect.InaccessibleObjectException: Unable to make field private jdk.internal.platform.cgroupv1.CgroupV1SubsystemController jdk.internal.platform.cgroupv1.CgroupV1Subsystem.cpu accessible: module java.base does not "opens jdk.internal.platform.cgroupv1" to unnamed module @1a2e2935 java.lang.reflect.InaccessibleObjectException: Unable to make field private jdk.internal.platform.cgroupv1.CgroupV1SubsystemController jdk.internal.platform.cgroupv1.CgroupV1Subsystem.cpuacct accessible: module java.base does not "opens jdk.internal.platform.cgroupv1" to unnamed module @1a2e2935 java.lang.reflect.InaccessibleObjectException: Unable to make field private jdk.internal.platform.cgroupv1.CgroupV1SubsystemController jdk.internal.platform.cgroupv1.CgroupV1Subsystem.cpuset accessible: module java.base does not "opens jdk.internal.platform.cgroupv1" to unnamed module @1a2e2935 java.lang.reflect.InaccessibleObjectException: Unable to make field private jdk.internal.platform.cgroupv1.CgroupV1SubsystemController jdk.internal.platform.cgroupv1.CgroupV1Subsystem.blkio accessible: module java.base does not "opens jdk.internal.platform.cgroupv1" to unnamed module @1a2e2935 java.lang.reflect.InaccessibleObjectException: Unable to make field private jdk.internal.platform.cgroupv1.CgroupV1SubsystemController jdk.internal.platform.cgroupv1.CgroupV1Subsystem.pids accessible: module java.base does not "opens jdk.internal.platform.cgroupv1" to unnamed module @1a2e2935